# nimas-notifier

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check.yml
app/: __init__.py  api_scraper.py  browser_scraper.py  main.py  notifier.py  playwright_scraper.py  scrape.py
